--- a/tantivy/Cargo.toml
+++ b/tantivy/Cargo.toml
@@ -8,3 +8,7 @@ tantivy = "0.4.4"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+
+[[bin]]
+name = "build_index"
+path = "src/build_index.rs"
