--- a/tantivy/Cargo.toml
+++ b/tantivy/Cargo.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 authors = ["jwolfe"]
 
 [dependencies]
-tantivy = "0.4.4"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+
+[dependencies.tantivy]
+git = "https://github.com/tantivy-search/tantivy.git"
+rev = "1fc7afa90a69d47d836ea22bae2da785fb75dad7"
