--- a/benchmark/Cargo.toml
+++ b/benchmark/Cargo.toml
@@ -1,9 +1,13 @@
 [package]
 name = "benchmark"
 version = "0.1.0"
-authors = ["Jason Wolfe <jwolfe@indeed.com>"]
+authors = ["Jason Wolfe"]
 
 [dependencies]
 bzip2 = "0.3"
+clap = "2.30.0"
+csv = "1.0.0-beta.5"
 quick-xml = "0.11.0"
+rand = "0.4"
+scraper = "0.5.0"
 stopwatch = "0.0.7"
