--- a/tantivy/Cargo.toml
+++ b/tantivy/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "tantivy-bench"
 version = "0.1.0"
-authors = ["jwolfe"]
+authors = ["Jason Wolfe"]
 
 [dependencies]
 serde = "1.0"
